Add auth feature to app

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=LaraForm
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_OWNER=
+APP_OWNER_URL=
 
 LOG_CHANNEL=stack
 
@@ -15,7 +17,7 @@ DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
