Complete form response feature

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "iatstuti/laravel-cascade-soft-deletes": "^1.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "mews/purifier": "~2.0"
     },
     "require-dev": {
